tests/ui/typeck/bad-type-in-vec-push.stderr
error[E0308]: mismatched types
  --> $DIR/bad-type-in-vec-push.rs:11:17
   |
LL |     result.push(vector);
   |            ---- ^^^^^^ expected integer, found `Vec<_>`
   |            |
   |            arguments to this method are incorrect
   |
   = note: expected type `{integer}`
            found struct `Vec<_>`
note: method defined here
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL

error[E0308]: mismatched types
  --> $DIR/bad-type-in-vec-push.rs:18:12
   |
LL |     x.push("");
   |       ---- ^^ expected integer, found `&str`
   |       |
   |       arguments to this method are incorrect
   |
note: method defined here
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
